tests/baselines/reference/decoratorOnFunctionExpression.errors.txt
decoratorOnFunctionExpression.ts(3,13): error TS1109: Expression expected.
decoratorOnFunctionExpression.ts(3,14): error TS1005: ',' expected.
decoratorOnFunctionExpression.ts(3,23): error TS1003: Identifier expected.


==== decoratorOnFunctionExpression.ts (3 errors) ====
    declare function dec<T>(target: T): T;
    
    var F = @dec function () {
                
!!! error TS1109: Expression expected.
                 ~~~~~~~~
!!! error TS1005: ',' expected.
                          ~
!!! error TS1003: Identifier expected.
    }